--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <a href="https://www.allrecipes.com/recipe/16383/basic-crepes/">Crepes Recipe</a>
 </body>
 
 </html>
