--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -8,5 +8,7 @@
 
 <body>
     <h1>Basic Crepes</h1>
+
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F02%2F22%2F16383-basic-crepes-mfs_003.jpg" alt="The delicious crepes">
 </body>
 </html>
