--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -10,5 +10,22 @@
     <h1>Basic Crepes</h1>
 
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F02%2F22%2F16383-basic-crepes-mfs_003.jpg" alt="The delicious crepes">
+    <p>Here is a simple but delicious crepe batter which can be made in minutes. It's made from ingredients that everyone has on hand.</p>
+
+    <ul>
+        <li>One cup all-purpose flour</li>
+        <li>Two eggs</li>
+        <li>One and a half cup milk</li>
+        <li>One and a half cup water</li>
+        <li>One and a quarter teaspoon salt</li>
+        <li>Two tablespoons butter, melted</li>
+    </ul>
+
+    <ol>
+        <li>In a large mixing bowl, whisk together the flour and the eggs. Gradually add in the milk and water, stirring to combine. Add the salt and butter; beat until smooth.</li>
+        <li>Heat a lightly oiled griddle or frying pan over medium high heat. Pour or scoop the batter onto the griddle, using approximately 1/4 cup for each crepe. Tilt the pan with a circular motion so that the batter coats the surface evenly.</li>
+        <li>Cook the crepe for about 2 minutes, until the bottom is light brown. Loosen with a spatula, turn and cook the other side. Serve hot.</li>
+
+    </ol>
 </body>
 </html>
