Add two new links on page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/crepes.html">Crepes Recipe</a>
+
+    <ul>
+    <li><a href="./recipes/crepes.html">Crepes Recipe</a></li>
+    <li><a href="./recipes/frtoast.html">French Toast Recipe"</a></li>
+    <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+    </ul>
+    
 </body>
 
 </html>
