--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
     <li><a href="./recipes/frtoast.html">French Toast Recipe"</a></li>
     <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
     </ul>
-    
+
 </body>
 
 </html>
