--- a/recipes/frtoast.html
+++ b/recipes/frtoast.html
@@ -10,6 +10,24 @@
     <h1>French Toast</h1>
 
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F03%2F08%2F7016-french-toast-mfs-011.jpg" alt="Toasty french toast.">
+    <p>There are many, fancy variations on this basic recipe. This easy recipe works with many types of bread – white, whole wheat, brioche, cinnamon-raisin, Italian, or French. Serve hot with butter or margarine and maple syrup.</p>
+
+    <ul>
+        <li>Two thirds of cup milk</li>
+        <li>2 large eggs</li>
+        <li>One teaspoon vanilla extract(Optional)</li>
+        <li>One and a quarter teaspoon ground cinnamon</li>
+        <li>salt to taste</li>
+        <li>Six thick slices bread</li>
+        <li>One tablespoon unsalted butter, or more as needed</li>
+    </ul>
+
+    <ol>
+        <li>Whisk milk, eggs, vanilla, cinnamon, and salt together in a shallow bowl.</li>
+        <li>Lightly butter a griddle and heat over medium-high heat.</li>
+        <li>Dunk bread in the egg mixture, soaking both sides. Transfer to the hot skillet and cook until golden, 3 to 4 minutes per side. Serve hot.</li>
+    </ol>
+
 </body>
 
 </html>
