Remove the quotation marks from French Toast link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <ul>
     <li><a href="./recipes/crepes.html">Crepes Recipe</a></li>
-    <li><a href="./recipes/frtoast.html">French Toast Recipe"</a></li>
+    <li><a href="./recipes/frtoast.html">French Toast Recipe</a></li>
     <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
     </ul>
 
