--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,8 +10,30 @@
     <h1>Lasagna</h1>
 
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8963973.jpg" alt="Yummy lasagna">
+    <p>This lasagna takes a little work, but it is worth it.</p>
 
-    
+    <ul>
+        <li>One pound sweet Italian sausage</li>
+        <li>¾ pound lean ground beef</li>
+        <li>½ cup minced onion</li>
+        <li>2 cloves garlic, crushed</li>
+        <li>1 (28 ounce) can crushed tomatoes</li>
+        <li>2 (6 ounce) cans tomato paste</li>
+        <li>2 (6.5 ounce) cans canned tomato sauce</li>
+        <li>½ cup water</li>
+        <li>2 tablespoons white sugar</li>
+        <li>1 ½ teaspoons dried basil leaves</li>
+        <li>½ teaspoon fennel seeds</li>
+        <li>1 teaspoon Italian seasoning</li>
+        <li>1 ½ teaspoons salt, divided, or to taste</li>
+        <li>¼ teaspoon ground black pepper</li>
+        <li>4 tablespoons chopped fresh parsley</li>
+        <li>12 lasagna noodles</li>
+        <li>16 ounces ricotta cheese</li>
+        <li>1 egg</li>
+        <li>¾ pound mozzarella cheese, sliced</li>
+        <li>¾ cup grated Parmesan cheese</li>
+    </ul>
 </body>
 
 </html>
