Create a css file and add a viking image to front

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheets" href="styles.css">
     <meta charset="UTF-8">
     <title>Project Recipes</title>
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
+    <img src="https://static.wikia.nocookie.net/howtotrainyourdragon/images/1/1f/PoHaaBYM-12-HiccupStoick.JPG/revision/latest?cb=20190916160339" alt="Odin-like"/>
 
     <ul>
     <li><a href="./recipes/crepes.html">Crepes Recipe</a></li>
