Change the image and add a little description

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <img src="https://static.wikia.nocookie.net/howtotrainyourdragon/images/1/1f/PoHaaBYM-12-HiccupStoick.JPG/revision/latest?cb=20190916160339" alt="Odin-like"/>
+    <p>By your truly Chef Viking</p>
+    <img src="https://i.pinimg.com/280x280_RS/7a/0f/a2/7a0fa2325f2348bbd7f789f7a4b5b915.jpg" alt="Odin-like"/>
 
     <ul>
     <li><a href="./recipes/crepes.html">Crepes Recipe</a></li>
