Add a little description about chef himself

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <p>By your truly Chef Viking</p>
+    <p class="by">By your truly Chef Viking</p>
     <img src="https://i.pinimg.com/280x280_RS/7a/0f/a2/7a0fa2325f2348bbd7f789f7a4b5b915.jpg" alt="Odin-like"/>
+    <p class="desc">Hello there ! Greetings from the slavic lands ! I am The Northman ! I have been called many names as I have been going through a lot of war bloods and dirts.
+        However, I have decided that I shall use my hands for the benefits of humanity. We, as humans, should stop war and help each other in order to create a better world ! In my
+        website, I have created three recipes that you will like. Soon, we will cook together and have a big feast !
+    </p>
 
     <ul>
     <li><a href="./recipes/crepes.html">Crepes Recipe</a></li>
