--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="backcrepes.css">
     <meta charset="UTF-8">
     <title>Crepes</title>
 </head>
