Remodify the whole appearance of h1 and ingredients

--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -11,8 +11,10 @@
     <h1>Basic Crepes</h1>
 
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F02%2F22%2F16383-basic-crepes-mfs_003.jpg" alt="The delicious crepes">
-    <p>Here is a simple but delicious crepe batter which can be made in minutes. It's made from ingredients that everyone has on hand.</p>
+    <p id="desc">Here is a simple but delicious <em>crepe batter</em> which can be made in minutes. It's made from ingredients that everyone has on hand.</p>
 
+
+    <p id="ingredients">Ingredients :</p>
     <ul>
         <li>One cup all-purpose flour</li>
         <li>Two eggs</li>
@@ -21,6 +23,7 @@
         <li>One and a quarter teaspoon salt</li>
         <li>Two tablespoons butter, melted</li>
     </ul>
+    
 
     <ol>
         <li>In a large mixing bowl, whisk together the flour and the eggs. Gradually add in the milk and water, stirring to combine. Add the salt and butter; beat until smooth.</li>
