--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -24,10 +24,13 @@
         <li>Two tablespoons butter, melted</li>
     </ul>
     
+    <p id="steps">Steps :</p>
 
     <ol>
         <li>In a large mixing bowl, whisk together the flour and the eggs. Gradually add in the milk and water, stirring to combine. Add the salt and butter; beat until smooth.</li>
+        <br>
         <li>Heat a lightly oiled griddle or frying pan over medium high heat. Pour or scoop the batter onto the griddle, using approximately 1/4 cup for each crepe. Tilt the pan with a circular motion so that the batter coats the surface evenly.</li>
+        <br>
         <li>Cook the crepe for about 2 minutes, until the bottom is light brown. Loosen with a spatula, turn and cook the other side. Serve hot.</li>
 
     </ol>
