Add finishing touch to the crepes

--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -34,5 +34,7 @@
         <li>Cook the crepe for about 2 minutes, until the bottom is light brown. Loosen with a spatula, turn and cook the other side. Serve hot.</li>
 
     </ol>
+
+    <p id="tadaa">Voila ! You can enjoy your sweet beautiful creeps now !</p>
 </body>
 </html>
