Fix minor link mistakes

--- a/recipes/frtoast.html
+++ b/recipes/frtoast.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link ref="stylesheet" href="backtoast.css">
+    <link rel="stylesheet" href="backtoast.css">
     <meta charset="UTF-8">
     <title>French Toast</title>
 </head>
