Remodify the description to bolder and some italic fonts

--- a/recipes/frtoast.html
+++ b/recipes/frtoast.html
@@ -11,7 +11,7 @@
     <h1>French Toast</h1>
 
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F03%2F08%2F7016-french-toast-mfs-011.jpg" alt="Toasty french toast.">
-    <p>There are many, fancy variations on this basic recipe. This easy recipe works with many types of bread – white, whole wheat, brioche, cinnamon-raisin, Italian, or French. Serve hot with butter or margarine and maple syrup.</p>
+    <p id="desc">There are many, fancy variations on this basic recipe. This easy recipe works with many types of bread – white, whole wheat, brioche, cinnamon-raisin, <em>Italian</em>, or <em>French.</em> Serve hot with butter or margarine and maple syrup.</p>
 
     <ul>
         <li>Two thirds of cup milk</li>
