Remodify the steps with border box and line breaks

--- a/recipes/frtoast.html
+++ b/recipes/frtoast.html
@@ -25,9 +25,13 @@
         <li>One tablespoon unsalted butter, or more as needed</li>
     </ul>
 
+    <p id="steps">Steps :</p>
+
     <ol>
         <li>Whisk milk, eggs, vanilla, cinnamon, and salt together in a shallow bowl.</li>
+        <br>
         <li>Lightly butter a griddle and heat over medium-high heat.</li>
+        <br>
         <li>Dunk bread in the egg mixture, soaking both sides. Transfer to the hot skillet and cook until golden, 3 to 4 minutes per side. Serve hot.</li>
     </ol>
 
