Add finishing touch to toast page

--- a/recipes/frtoast.html
+++ b/recipes/frtoast.html
@@ -35,6 +35,8 @@
         <li>Dunk bread in the egg mixture, soaking both sides. Transfer to the hot skillet and cook until golden, 3 to 4 minutes per side. Serve hot.</li>
     </ol>
 
+    <p id="tadaa">Voila ! You can enjoy your toasty crunchy french now !</p>
+
 </body>
 
 </html>
