--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="backlasagna.css">
     <meta charset="UTF-8">
     <title>Lasagna</title>
 </head>
