--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,7 +11,7 @@
     <h1>Lasagna</h1>
 
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8963973.jpg" alt="Yummy lasagna">
-    <p>This lasagna takes a little work, but it is worth it.</p>
+    <p id="desc">This <em>lasagna</em> takes a little work, but it is worth it.</p>
 
     <ul>
         <li>One pound sweet Italian sausage</li>
